[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digiforge"
version = "0.2.0"
description = "DigiAssets v3 SDK for DigiByte — clean, production-grade, UTXO-native"
authors = [{name = "Kael", email = "kael@project-trinity.io"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["digibyte", "digiassets", "blockchain", "utxo", "dgb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial",
]

# stdlib only for core — no required dependencies
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/project-trinity/digiforge"
Repository = "https://github.com/project-trinity/digiforge"
Issues = "https://github.com/project-trinity/digiforge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["digiforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
